--- a/css2.css
+++ b/css2.css
@@ -1,5 +1,5 @@
 
 @font-face {
     font-family: FunnyWiiFont;
-    src: url(https://github.com/MemeyWasTaken/helpmeohgod/blob/main/AOTFShinGoProRegular.otf);
+    src: url(AOTFShinGoProRegular.otf);
 }
